--- a/Literatur.bib
+++ b/Literatur.bib
@@ -166,6 +166,21 @@
   isrn        = {2512-319X},
 }
 
+@Report{kiss,
+  author      = {Byron, Smith},
+  date        = {2012-04-23},
+  institution = {X Double Dot LLC},
+  title       = {How to KISS: The Art of Keeping it Simple, Stupid},
+  type        = {resreport},
+  location    = {723 W Aspen Ave, Ste},
+}
+
+@WWW{googlemaps,
+  date  = {2022-03-12},
+  title = {Google Maps},
+  url   = {https://maps.google.com},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
